output/output.txt
Waf: Entering directory `/home/ali/Education/rapidnet_v1.0/build'
[284/376] cxx: src/rapidnet/rapidnet-script-utils.cc -> build/debug/src/rapidnet/rapidnet-script-utils_1.o
../src/rapidnet/rapidnet-script-utils.cc: In function ‘ns3::ApplicationContainer ns3::rapidnet::InitRapidNetApps(int, ns3::Ptr<ns3::rapidnet::RapidNetApplicationHelper>, ns3::Ipv4Address, std::string)’:
../src/rapidnet/rapidnet-script-utils.cc:58:4: error: ‘AsciiTraceHelper’ was not declared in this scope
    AsciiTraceHelper ascii;
    ^
../src/rapidnet/rapidnet-script-utils.cc:58:21: error: expected ‘;’ before ‘ascii’
    AsciiTraceHelper ascii;
                     ^
../src/rapidnet/rapidnet-script-utils.cc:59:8: error: ‘OutputStreamWrapper’ was not declared in this scope
    Ptr<OutputStreamWrapper> stream = ascii.CreateFileStream ("rapidnet.tr");
        ^
../src/rapidnet/rapidnet-script-utils.cc:59:27: error: template argument 1 is invalid
    Ptr<OutputStreamWrapper> stream = ascii.CreateFileStream ("rapidnet.tr");
                           ^
../src/rapidnet/rapidnet-script-utils.cc:59:36: error: invalid type in declaration before ‘=’ token
    Ptr<OutputStreamWrapper> stream = ascii.CreateFileStream ("rapidnet.tr");
                                    ^
../src/rapidnet/rapidnet-script-utils.cc:59:38: error: ‘ascii’ was not declared in this scope
    Ptr<OutputStreamWrapper> stream = ascii.CreateFileStream ("rapidnet.tr");
                                      ^
../src/rapidnet/rapidnet-script-utils.cc:61:31: error: no matching function for call to ‘ns3::CsmaHelper::EnableAsciiAll(int&)’
    csma.EnableAsciiAll (stream);
                               ^
../src/rapidnet/rapidnet-script-utils.cc:61:31: note: candidate is:
In file included from ../src/rapidnet/rapidnet-script-utils.h:37:0,
                 from ../src/rapidnet/rapidnet-script-utils.cc:19:
debug/ns3/csma-helper.h:181:15: note: static void ns3::CsmaHelper::EnableAsciiAll(std::ostream&)
   static void EnableAsciiAll (std::ostream &os);
               ^
debug/ns3/csma-helper.h:181:15: note:   no known conversion for argument 1 from ‘int’ to ‘std::ostream& {aka std::basic_ostream<char>&}’
Waf: Leaving directory `/home/ali/Education/rapidnet_v1.0/build'
Build failed
 -> task failed (err #1): 
	{task: cxx rapidnet-script-utils.cc -> rapidnet-script-utils_1.o}
